--- a/app/src/main/res/layout/activity_information_bulletin.xml
+++ b/app/src/main/res/layout/activity_information_bulletin.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBarForInfoList"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
