--- a/app/src/main/res/layout/list_of_info.xml
+++ b/app/src/main/res/layout/list_of_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
 
     <android.support.v7.widget.CardView
@@ -11,7 +11,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="No Information"
             android:id="@+id/infoTextView"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
