--- a/app/src/main/res/layout/activity_information_bulletin.xml
+++ b/app/src/main/res/layout/activity_information_bulletin.xml
@@ -20,6 +20,7 @@
         android:id="@+id/recyclerViewInformationBulletinAdmin">
 
     </android.support.v7.widget.RecyclerView>
+    <!--
 
     <TextView
         android:layout_width="match_parent"
@@ -54,5 +55,18 @@
         android:layout_marginTop="20dp"
         android:id="@+id/addInfo"
         android:text="Add information"/>
+        -->
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addInfoFloating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="22dp"
+        android:layout_marginRight="22dp"
+        app:srcCompat="@drawable/ic_note_add_black"
+        tools:ignore="VectorDrawableCompat" />
 
 </RelativeLayout>
