--- a/app/src/main/res/layout/list_of_info.xml
+++ b/app/src/main/res/layout/list_of_info.xml
@@ -8,15 +8,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date at TIme"
+                android:textSize="12dp"
+                android:id="@+id/dateAndTimeInfo"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:padding="8dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="No Information"
+                    android:id="@+id/infoTextView"
+                    android:gravity="left"
+                    android:layout_marginHorizontal="5dp"
+                    android:textSize="20dp"
+                    android:textColor="#000000"
+                    android:layout_gravity="center"
+                    android:layout_toLeftOf="@id/deleteInfo"
+                    />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_delete_black"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/deleteInfo"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No Information"
-            android:id="@+id/infoTextView"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_gravity="center"
-            />
+            </RelativeLayout>
+
+
+
+        </LinearLayout>
+
+
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
