--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -58,15 +58,18 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/textViewUserQuestion"
                     android:text="Question Text View"
                     android:textSize="20sp" />
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/imageViewUserQuestion"
                     android:src="@drawable/ic_launcher_background"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20dp" />
+                    android:layout_marginTop="20dp"
+                    android:visibility="gone"/>
 
                 <GridLayout
                     android:layout_width="match_parent"
@@ -112,11 +115,14 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:src="@mipmap/ic_launcher" />
+                                android:id="@+id/imageViewUserOptionA"
+                                android:src="@mipmap/ic_launcher"
+                                android:visibility="gone"/>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:id="@+id/textViewUserOptionA"
                                 android:text="About above image" />
 
                         </LinearLayout>
@@ -158,11 +164,14 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:src="@mipmap/ic_launcher"/>
+                                android:id="@+id/imageViewUserOptionB"
+                                android:src="@mipmap/ic_launcher"
+                                android:visibility="gone"/>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:id="@+id/textViewUserOptionB"
                                 android:text="About above image" />
 
                         </LinearLayout>
@@ -204,11 +213,14 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:src="@mipmap/ic_launcher"/>
+                                android:id="@+id/imageViewUserOptionC"
+                                android:src="@mipmap/ic_launcher"
+                                android:visibility="gone"/>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:id="@+id/textViewUserOptionC"
                                 android:text="About above image" />
 
                         </LinearLayout>
@@ -250,11 +262,14 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:src="@mipmap/ic_launcher"/>
+                                android:id="@+id/imageViewUserOptionD"
+                                android:src="@mipmap/ic_launcher"
+                                android:visibility="gone"/>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:id="@+id/textViewUserOptionD"
                                 android:text="About above image" />
 
                         </LinearLayout>
@@ -267,6 +282,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/textViewUserExplanation"
                     android:text="Explanation/Hint"
                     android:textSize="25sp"
                     android:textAlignment="center"/>
@@ -289,7 +305,8 @@
         android:layout_marginBottom="22dp"
         android:layout_marginRight="10dp"
         app:srcCompat="@drawable/ic_navigate_next_black"
-        tools:ignore="VectorDrawableCompat" />
+        tools:ignore="VectorDrawableCompat"
+        android:visibility="gone"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/previousQuestion"
@@ -301,7 +318,8 @@
         android:layout_marginBottom="22dp"
         android:layout_marginLeft="10dp"
         app:srcCompat="@drawable/ic_navigate_before_black"
-        tools:ignore="VectorDrawableCompat" />
+        tools:ignore="VectorDrawableCompat"
+        android:visibility="gone"/>
 
     <!--
 
