--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".RegisterActivity"
+    android:padding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +18,6 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_margin="15dp"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,46 +27,80 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editTextFirstName"
-                android:layout_width="wrap_content"
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="First Name" />
+                android:layout_weight="1">
 
-            <EditText
-                android:id="@+id/editTextLastName"
-                android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/editTextFirstName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:hint="First Name" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="Last Name" />
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/editTextLastName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:hint="Last Name" />
+            </android.support.design.widget.TextInputLayout>
+
         </LinearLayout>
 
-        <EditText
-            android:layout_margin="15dp"
-            android:inputType="textEmailAddress"
-            android:id="@+id/editTextEmail"
-            android:hint="Email"
+        <Spinner
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:id="@+id/spinnerCollegeList">
+        </Spinner>
 
-        <EditText
-            android:layout_margin="15dp"
-            android:inputType="textPassword"
-            android:id="@+id/editTextPassword"
-            android:hint="Password"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <EditText
+                android:inputType="textEmailAddress"
+                android:id="@+id/editTextEmail"
+                android:hint="Email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <EditText
+                android:inputType="textPassword"
+                android:id="@+id/editTextPassword"
+                android:hint="Password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
 
         <Button
-            android:layout_margin="15dp"
+            android:layout_marginTop="15dp"
             android:id="@+id/buttonRegister"
             android:text="Register User"
             android:layout_width="match_parent"
@@ -74,7 +108,7 @@
 
         <TextView
             android:id="@+id/textViewSignin"
-            android:layout_margin="15dp"
+            android:layout_marginTop="15dp"
             android:text="Already registered? Sign in here"
             android:textAlignment="center"
             android:layout_width="match_parent"
