--- a/app/src/main/res/layout/fragment_professional.xml
+++ b/app/src/main/res/layout/fragment_professional.xml
@@ -1,38 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="WELCOME"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:id="@+id/welcome"
-        android:layout_marginTop="10dp"
-        />
+    tools:context=".ProfessionalFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Dashboard"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:id="@+id/title"
-        android:layout_below="@id/welcome"
-        android:textStyle="bold"
-        />
-
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
     <GridLayout
-        android:id="@+id/gdView"
+        android:id="@+id/gdViewOfProfessional"
         android:layout_width="match_parent"
         android:layout_height="332dp"
         android:layout_alignParentStart="true"
@@ -58,7 +38,7 @@
             app:cardBackgroundColor="#4c97e7"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            android:id="@+id/scorecardCard"
+            android:id="@+id/firstProfessionalCard"
             android:clickable="true"
             >
 
@@ -73,7 +53,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Scorecard"
+                    android:text="First Professional"
                     android:textAlignment="center"
                     android:textSize="18dp"
                     android:textStyle="bold" />
@@ -93,7 +73,7 @@
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
             android:clickable="true"
-            android:id="@+id/mcqCard"
+            android:id="@+id/secondProfessionalCard"
             >
 
             <LinearLayout
@@ -108,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="MCQ"
+                    android:text="Second Professional"
                     android:textSize="18dp"
                     android:textAlignment="center" />
 
@@ -127,7 +107,7 @@
             app:cardBackgroundColor="#4c97e7"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:id="@+id/studyCard"
+            android:id="@+id/thirdProfessionalPartOneCard"
             android:clickable="true"
             >
 
@@ -142,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Study"
+                    android:text="Third Professional Part 1"
                     android:textSize="18dp"
                     android:textAlignment="center" />
 
@@ -161,7 +141,7 @@
             app:cardBackgroundColor="#4c97e7"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:id="@+id/questionBankCard"
+            android:id="@+id/thirdProfessionalPartTwoCard"
             android:clickable="true"
             >
 
@@ -176,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Question Bank"
+                    android:text="Third Professional Part 2"
                     android:textSize="18dp"
                     android:textAlignment="center" />
 
@@ -187,4 +167,4 @@
 
     </GridLayout>
 
-</RelativeLayout>
+</FrameLayout>
