professionals and subjects activities added under mcq section

--- a/app/src/main/res/layout/activity_professionals.xml
+++ b/app/src/main/res/layout/activity_professionals.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ProfessionalFragment">
+    tools:context=".ProfessionalsActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
     <GridLayout
         android:id="@+id/gdViewOfProfessional"
         android:layout_width="match_parent"
@@ -167,4 +162,4 @@
 
     </GridLayout>
 
-</FrameLayout>
+</RelativeLayout>
