--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -287,6 +287,14 @@
                     android:textSize="25sp"
                     android:textAlignment="center"/>
 
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageViewUserExplanation"
+                    android:src="@drawable/ic_launcher_background"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    />
 
             </LinearLayout>
 
