--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -82,13 +82,12 @@
                     android:alignmentMode="alignMargins">
 
                     <android.support.v7.widget.CardView
+                        android:id="@+id/optionACardView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/optionA"
-                        android:layout_margin="16dp"
                         android:layout_columnWeight="1"
+                        android:layout_margin="16dp"
                         android:layout_rowWeight="1"
-                        android:clickable="true"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="8dp">
 
@@ -97,32 +96,34 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
                         </LinearLayout>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="A : "
-                            android:textSize="25sp"
                             android:layout_gravity="start"
                             android:layout_marginLeft="10dp"
-                            android:gravity="center"/>
+                            android:gravity="center"
+                            android:text="A : "
+                            android:textSize="25sp" />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
                             android:layout_gravity="center"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="vertical">
 
                             <ImageView
+                                android:id="@+id/imageViewUserOptionA"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/imageViewUserOptionA"
                                 android:src="@mipmap/ic_launcher"
-                                android:visibility="gone"/>
+                                android:visibility="gone" />
 
                             <TextView
+                                android:id="@+id/textViewUserOptionA"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/textViewUserOptionA"
                                 android:text="About above image" />
 
                         </LinearLayout>
@@ -132,7 +133,7 @@
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/optionB"
+                        android:id="@+id/optionBCardView"
                         android:layout_margin="16dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
@@ -181,7 +182,7 @@
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/optionC"
+                        android:id="@+id/optionCCardView"
                         android:layout_margin="16dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
@@ -230,7 +231,7 @@
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/optionD"
+                        android:id="@+id/optionDCardView"
                         android:layout_margin="16dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
@@ -293,8 +294,18 @@
                     android:id="@+id/imageViewUserExplanation"
                     android:src="@drawable/ic_launcher_background"
                     android:layout_gravity="center"
-                    android:visibility="gone"
-                    />
+                    android:visibility="gone" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/buttonSubmitAnswer"
+                    android:clickable="false"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Submit"
+                    android:textSize="25sp"/>
 
             </LinearLayout>
 
