--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Dashboard"
+        android:text="Home Page"
         android:textSize="30sp"
         android:textAlignment="center"
         android:id="@+id/title"
@@ -39,7 +39,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/title"
         android:layout_weight="8"
-        android:padding="14dp"
+        android:padding="2dp"
         android:columnCount="1"
         android:columnOrderPreserved="false"
         android:rowCount="1"
@@ -53,14 +53,24 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_columnWeight="1"
-            android:layout_margin="16dp"
+            android:layout_margin="2dp"
             android:layout_rowWeight="1"
             app:cardBackgroundColor="#4c97e7"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:id="@+id/scorecardCard"
             android:clickable="true"
+            android:padding="5dp"
             >
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/recyclerViewVideoCategories">
+
+            </android.support.v7.widget.RecyclerView>
+            <!--
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -79,6 +89,7 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+            -->
         </android.support.v7.widget.CardView>
 
 
@@ -88,7 +99,7 @@
             android:layout_height="0dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_margin="16dp"
+            android:layout_margin="2dp"
             app:cardBackgroundColor="#4c97e7"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
@@ -123,7 +134,7 @@
             android:layout_height="0dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_margin="16dp"
+            android:layout_margin="2dp"
             app:cardBackgroundColor="#4c97e7"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
@@ -157,7 +168,7 @@
             android:layout_height="0dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_margin="16dp"
+            android:layout_margin="2dp"
             app:cardBackgroundColor="#4c97e7"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
