--- a/app/src/main/res/menu/activity_user_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_user_profile_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home_black"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_scbSection"
             android:icon="@drawable/ic_home_black"
             android:title="SCB section" />
