--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,7 +66,7 @@
             <android.support.v7.widget.RecyclerView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:scrollbars="vertical"
                 android:id="@+id/recyclerViewVideoCategories">
 
             </android.support.v7.widget.RecyclerView>
