--- a/app/src/main/res/layout/list_of_video_categories.xml
+++ b/app/src/main/res/layout/list_of_video_categories.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="wrap_content" android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/nameOfVideoCategories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="No category"
-                android:id="@+id/nameOfVideoCategories"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="No category" />
 
         </LinearLayout>
 
