mocktest activity created in each professional

--- a/app/src/main/res/layout/activity_user_professional_first.xml
+++ b/app/src/main/res/layout/activity_user_professional_first.xml
@@ -139,7 +139,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/MockTestCard"
+                android:id="@+id/firstProfessionalMockTestCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
